fix: tighten hero and About Me spacing
Reduce #initial-name margin-top 100px -> 60px and
#seperator margin-top 200px -> 80px to close the excessive gap.

--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ body{
     color:#F2F0EF;
     margin-left: 72px;
     margin-bottom:0px;
-    margin-top:200px;
+    margin-top:80px;
     width: 850px;
     font-weight: lighter;
     border-bottom: 2px solid #495057;
@@ -333,7 +333,7 @@ body{
 #initial-name{
     color: #FF7D29;
     margin-bottom: 0px;
-    margin-top:100px;
+    margin-top:60px;
 }
 
 #hero-role {
